CREATE DATABASE IF NOT EXISTS flowers;
USE flowers;

CREATE TABLE IF NOT EXISTS Customer (
    ID INT PRIMARY KEY AUTO_INCREMENT,
    Name VARCHAR(100) NOT NULL,
    Email VARCHAR(100) UNIQUE NOT NULL,
    Phone VARCHAR(20),
    Address TEXT,
    LoyaltyPoints INT DEFAULT 0
);

CREATE TABLE IF NOT EXISTS Product (
    ID INT PRIMARY KEY AUTO_INCREMENT,
    Name VARCHAR(100) NOT NULL,
    Description TEXT,
    Price DECIMAL(10, 2) NOT NULL,
    StockQuantity INT NOT NULL DEFAULT 0,
    Category VARCHAR(50)
);

CREATE TABLE IF NOT EXISTS `Order` (
    ID INT PRIMARY KEY AUTO_INCREMENT,
    CustomerID INT NOT NULL,
    OrderDate DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
    Status VARCHAR(50) NOT NULL,
    TotalAmount DECIMAL(10, 2) NOT NULL,
    FOREIGN KEY (CustomerID) REFERENCES Customer(ID) ON DELETE CASCADE
);

CREATE TABLE OrderProduct (
    ID INT PRIMARY KEY AUTO_INCREMENT,
    OrderID INT NOT NULL,
    ProductID INT NOT NULL,
    Quantity INT NOT NULL,
    Price DECIMAL(10, 2) NOT NULL,
    FOREIGN KEY (OrderID) REFERENCES `Order`(ID) ON DELETE CASCADE,
    FOREIGN KEY (ProductID) REFERENCES Product(ID)
);

CREATE TABLE IF NOT EXISTS Delivery (
    ID INT PRIMARY KEY AUTO_INCREMENT,
    OrderID INT UNIQUE NOT NULL,
    DeliveryDate DATETIME,
    DeliveryStatus VARCHAR(50) NOT NULL,
    Courier VARCHAR(100),
    FOREIGN KEY (OrderID) REFERENCES `Order`(ID) ON DELETE CASCADE
);
